<resources>
    <string name="app_name">Firebase Application</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="logo">Logo</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="messages">Messages</string>
    <string name="register">Register</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_users">View Users</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_contact_number">Enter contact number</string>
    <string name="add_user">Add User</string>
    <string name="notifications">Notifications</string>
    <string name="default_notification_channel_id">1</string>
</resources>